--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.10.3",
-    "tsup": "^8.0.1",
-    "tsx": "^4.6.2",
-    "typescript": "^5.3.3"
+    "@types/node": "20.10.3",
+    "tsup": "8.0.1",
+    "tsx": "4.6.2",
+    "typescript": "5.3.3"
   },
   "dependencies": {
-    "fastify": "^4.24.3"
+    "fastify": "4.24.3"
   }
 }
