--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@typescript-eslint/eslint-plugin": "6.13.2",
     "@typescript-eslint/parser": "6.13.2",
     "eslint": "8.55.0",
+    "prisma": "5.7.0",
     "tsup": "8.0.1",
     "tsx": "4.6.2",
     "typescript": "5.3.3"
   },
   "dependencies": {
+    "@prisma/client": "5.7.0",
     "dotenv": "16.3.1",
     "fastify": "4.24.3",
     "zod": "3.22.4"
