--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,8 @@
         "semi": [
             "error",
             "always"
-        ]
+        ],
+        "no-useless-constructor": "off",
+        "@typescript-eslint/no-explicit-any": "off"
     }
 }
