Criado os test e2e de authenticate, profile e register

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "vitest run --dir src/use-cases",
     "test:wath": "vitest --dir src/use-cases",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
-    "test:e2e": "vitest run --dir src/http"
+    "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http"
   },
   "keywords": [],
   "author": "",
@@ -20,11 +21,13 @@
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
     "@types/node": "20.10.3",
+    "@types/supertest": "6.0.2",
     "@typescript-eslint/eslint-plugin": "6.13.2",
     "@typescript-eslint/parser": "6.13.2",
     "eslint": "8.55.0",
     "npm-run-all": "4.1.5",
     "prisma": "5.7.0",
+    "supertest": "6.3.4",
     "tsup": "8.0.1",
     "tsx": "4.6.2",
     "typescript": "5.3.3",
